[gd_scene format=3 uid="uid://eav7y2rvgctg"]

[ext_resource type="Script" uid="uid://0we2d8l5ls15" path="res://scripts/game_over.gd" id="1_t8dbc"]
[ext_resource type="Texture2D" uid="uid://cf765lvunxgxx" path="res://art/tilset/Arcade Gamer (6).png" id="2_f6ibu"]
[ext_resource type="AudioStream" uid="uid://bgcpks5oxkxj6" path="res://Assets/background/mixkit-arcade-retro-game-over-213.wav" id="3_obuen"]
[ext_resource type="AudioStream" uid="uid://ccag84i6ublxc" path="res://Assets/background/soundreality-button-202966.mp3" id="4_sp1eb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xu1am"]
bg_color = Color(0.57443464, 0.59798044, 0.67563677, 1)
border_width_left = 16
border_width_top = 16
border_width_right = 16
border_width_bottom = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[node name="GameOverUI" type="Control" unique_id=662507157]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t8dbc")

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1634366129]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer" unique_id=434955306]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.5
offset_top = -46.5
offset_right = 56.5
offset_bottom = 46.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="RetryButton" type="Button" parent="CanvasLayer/VBoxContainer" unique_id=870791448]
layout_mode = 2
theme_override_colors/font_color = Color(0.01519029, 0.0048448946, 0.0015921254, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_xu1am")
text = "Retry"
metadata/_edit_use_anchors_ = true

[node name="MenuButton" type="Button" parent="CanvasLayer/VBoxContainer" unique_id=60505296]
layout_mode = 2
theme_override_colors/font_color = Color(0.01519029, 0.0048448946, 0.0015921254, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_xu1am")
text = "Main Menu"
metadata/_edit_use_anchors_ = true

[node name="ArcadeGamer(6)" type="Sprite2D" parent="." unique_id=1020578322]
position = Vector2(576.00006, 322.75)
scale = Vector2(1.1059731, 1.5455636)
texture = ExtResource("2_f6ibu")

[node name="gameover" type="AudioStreamPlayer2D" parent="." unique_id=924987271]
stream = ExtResource("3_obuen")
volume_db = -10.0

[node name="AudioClick" type="AudioStreamPlayer2D" parent="." unique_id=1279189267]
stream = ExtResource("4_sp1eb")

[connection signal="pressed" from="CanvasLayer/VBoxContainer/RetryButton" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/MenuButton" to="." method="_on_menu_pressed"]
