extends Control

# =========================
# üéµ ‡πÄ‡∏™‡∏µ‡∏¢‡∏á
# =========================
# ‡∏≠‡πâ‡∏≤‡∏á‡∏≠‡∏¥‡∏á‡πÇ‡∏´‡∏ô‡∏î‡πÄ‡∏™‡∏µ‡∏¢‡∏á
@onready var audio_click = $AudioClick 
@onready var gameover = $gameover

# =========================
# ‡∏ó‡∏≥‡∏á‡∏≤‡∏ô‡∏ó‡∏±‡∏ô‡∏ó‡∏µ‡∏ó‡∏µ‡πà‡πÄ‡∏õ‡∏¥‡∏î Scene ‡∏ô‡∏µ‡πâ
# =========================
func _ready():
	# üîä ‡πÄ‡∏•‡πà‡∏ô‡πÄ‡∏™‡∏µ‡∏¢‡∏á Game Over ‡∏ó‡∏±‡∏ô‡∏ó‡∏µ‡∏ó‡∏µ‡πà‡∏â‡∏≤‡∏Å‡πÇ‡∏´‡∏•‡∏î‡∏Ç‡∏∂‡πâ‡∏ô‡∏°‡∏≤
	if gameover:
		gameover.play()

# =========================
# ‡πÄ‡∏°‡∏∑‡πà‡∏≠‡∏Å‡∏î‡∏õ‡∏∏‡πà‡∏°‡∏ï‡πà‡∏≤‡∏á‡πÜ
# =========================
func _on_retry_pressed():
	print("‡πÄ‡∏£‡∏¥‡πà‡∏°‡πÄ‡∏•‡πà‡∏ô‡πÉ‡∏´‡∏°‡πà...")
	
	# üîä ‡πÄ‡∏•‡πà‡∏ô‡πÄ‡∏™‡∏µ‡∏¢‡∏á‡∏Å‡∏î‡∏õ‡∏∏‡πà‡∏°
	if audio_click:
		audio_click.play()
		# ‡∏£‡∏≠ 0.2 ‡∏ß‡∏¥‡∏ô‡∏≤‡∏ó‡∏µ‡πÄ‡∏û‡∏∑‡πà‡∏≠‡πÉ‡∏´‡πâ‡πÄ‡∏™‡∏µ‡∏¢‡∏á‡πÄ‡∏•‡πà‡∏ô‡∏≠‡∏≠‡∏Å‡∏°‡∏≤‡∏Å‡πà‡∏≠‡∏ô‡∏™‡∏•‡∏±‡∏ö‡∏â‡∏≤‡∏Å
		await get_tree().create_timer(0.2).timeout
		
	# ‡∏™‡∏≥‡∏Ñ‡∏±‡∏ç: ‡∏ï‡πâ‡∏≠‡∏á‡∏£‡∏µ‡πÄ‡∏ã‡πá‡∏ï‡∏Ñ‡πà‡∏≤‡∏ï‡πà‡∏≤‡∏á‡πÜ ‡πÉ‡∏ô GameDatabase ‡∏Å‡πà‡∏≠‡∏ô‡πÄ‡∏£‡∏¥‡πà‡∏°‡πÉ‡∏´‡∏°‡πà
	if GameDatabase.has_method("reset_game_progress"):
		GameDatabase.reset_game_progress()
	
	# ‡πÇ‡∏´‡∏•‡∏î‡∏â‡∏≤‡∏Å World ‡∏î‡πà‡∏≤‡∏ô‡πÅ‡∏£‡∏Å
	get_tree().change_scene_to_file("res://scene/world.tscn")

func _on_menu_pressed():
	print("‡∏Å‡∏•‡∏±‡∏ö‡πÄ‡∏°‡∏ô‡∏π‡∏´‡∏•‡∏±‡∏Å...")
	
	# üîä ‡πÄ‡∏•‡πà‡∏ô‡πÄ‡∏™‡∏µ‡∏¢‡∏á‡∏Å‡∏î‡∏õ‡∏∏‡πà‡∏°
	if audio_click:
		audio_click.play()
		await get_tree().create_timer(0.2).timeout
		
	get_tree().change_scene_to_file("res://scene/main_menu.tscn")
